@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-27T16:28:46Z",
-  "count_outdated" : 540,
-  "uniques_outdated" : 312,
-  "count" : 573,
+  "timestamp" : "2022-09-28T01:48:07Z",
+  "count_outdated" : 544,
+  "uniques_outdated" : 313,
+  "count" : 576,
   "uniques" : 331,
   "clones" : [
-    {
-      "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 2,
