@@ -1,3 +1,11 @@
+2022-09-28T01:48:07Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3140249932
+* notice: last 14d: unq all: 5 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 312 540 / 331 573
+* notice: next accum: outdated-unq outdated-all / unq all: 313 544 / 331 576
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-13] / []
+
 2022-09-27T16:28:46Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3137304038
 * notice: last 14d: unq all: 5 33
